início do projeto

--- a/index.html
+++ b/index.html
@@ -2,24 +2,30 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/style.css">
-    <title>Projeto Design</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Link-bio</title>
 </head>
 <body>
-    <main>
-        <header>
-            <h1></h1>
-        </header>
-        <article>
-            <h2></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore laudantium dicta deserunt libero. Vel minus alias eaque, velit cupiditate exercitationem reprehenderit, laboriosam asperiores, possimus autem dolores temporibus ex debitis! Error?</p>
-        </article>
-        <article>
-            <h2></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore laudantium dicta deserunt libero. Vel minus alias eaque, velit cupiditate exercitationem reprehenderit, laboriosam asperiores, possimus autem dolores temporibus ex debitis! Error?</p>
-        </article>
-    </main>
+    <section>
+        <div class="avatar">
+            <div class="borda"></div>
+            <img src="./assets/foto.svg" alt="foto do usuario" class="foto">
+        </div>
+        <span>instagram</span>
+        <div class="links">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+            <a href="#">Link 4</a>
+        </div>
+        <div class="socialMedia">
+            <img src="./assets/icones/twitter.svg" alt="twitter">
+            <img src="./assets/icones/twitch.svg" alt="twitch">
+            <img src="./assets/icones/instagram.svg" alt="instagram">
+            <img src="./assets/icones/linkedin.svg" alt="linkedin">
+            <img src="./assets/icones/github.svg" alt="github">
+        </div>
+    </section>
 </body>
 </html>
