--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
     <title>Link-bio</title>
 </head>
 <body>
-    <section>
-        <div class="avatar">
-            <div class="borda"></div>
-            <img src="./assets/foto.svg" alt="foto do usuario" class="foto">
+
+    <div class="avatar">
+        <div class="borda">
+            <img src="./assets/foto.svg" alt="foto do perfil">
         </div>
-        <span>instagram</span>
-        <div class="links">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-            <a href="#">Link 4</a>
-        </div>
-        <div class="socialMedia">
-            <img src="./assets/icones/twitter.svg" alt="twitter">
-            <img src="./assets/icones/twitch.svg" alt="twitch">
-            <img src="./assets/icones/instagram.svg" alt="instagram">
-            <img src="./assets/icones/linkedin.svg" alt="linkedin">
-            <img src="./assets/icones/github.svg" alt="github">
-        </div>
-    </section>
+    </div>
+    <span>instagram</span>
+    <div class="links">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+        <a href="#">Link 4</a>
+    </div>
+    <div class="socialMedia">
+        <img src="./assets/icones/twitter.svg" alt="twitter">
+        <img src="./assets/icones/twitch.svg" alt="twitch">
+        <img src="./assets/icones/instagram.svg" alt="instagram">
+        <img src="./assets/icones/linkedin.svg" alt="linkedin">
+        <img src="./assets/icones/github.svg" alt="github">
+    </div>
+
 </body>
 </html>
