--- a/index.html
+++ b/index.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Link-bio</title>
+    <title>Link Bio</title>
 </head>
 <body>
     <section>
-        <div class="avatar">
+        <!-- Foto -->
+        <div class="foto">
             <div class="borda"></div>
-            <img src="./assets/foto.svg" alt="foto do perfil">
-            
+            <img src="./assets/foto.svg" alt="Foto do perfil">
         </div>
-        <span>instagram</span>
+
+        <span>@instagram</span>
+        <!-- Links -->
         <div class="links">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-            <a href="#">Link 4</a>
+            <a href="">Link 1</a>
+            <a href="">Link 2</a>
+            <a href="">Link 3</a>
+            <a href="">Link 4</a>
         </div>
+        <!-- Mídias Sociais -->
         <div class="socialMedia">
             <img src="./assets/icones/twitter.svg" alt="twitter">
             <img src="./assets/icones/twitch.svg" alt="twitch">
             <img src="./assets/icones/instagram.svg" alt="instagram">
-            <img src="./assets/icones/linkedin.svg" alt="linkedin">
             <img src="./assets/icones/github.svg" alt="github">
+            <img src="./assets/icones/linkedin.svg" alt="linkedin">
         </div>
     </section>
 </body>
